@@ -2,6 +2,31 @@
  * @file
  * Styles for uc_order module.
  */
+
+.view-uc-orders .views-exposed-form .form-item {
+  padding-top: 4px;
+}
+
+.view-uc-orders #edit-order-id {
+  width: 10em;
+}
+
+.view-uc-orders tbody tr:hover {
+  background-color: #ddd;
+}
+
+.view-uc-orders tbody td.views-field-actions img {
+  padding: 3px 3px 0;
+}
+
+.view-uc-orders tbody td.views-field-order-total {
+  text-align: right;
+}
+
+.view-uc-orders tbody td.views-field-created {
+  text-align: center;
+}
+
 .order-overview-form {
   float: left;
   padding: 0em 2em 0em 0em;
