@@ -1,6 +1,7 @@
 name = Order
 description = REQUIRED. Receive and manage orders through your website.
 dependencies[] = rules
+dependencies[] = views
 package = Ubercart - core
 core = 7.x
 files[] = uc_order.module
