@@ -2,7 +2,10 @@ Ubercart 3.x, xxxx-xx-xx (development version)
 ------------------------
 - API:
     * uc_order_load_line_items() returns stored and calculated line items together.
+- UI:
+    * Converted "View orders" page to a View.
 - Misc:
+    * Added dependence on Views to Orders.
     * Restored dependence on Rules.
 
 Ubercart 3.0-beta4, 2011-7-25
